Added endpoint and controller implementation for delete on proxy
