# api/swagger/swagger.yaml
@@ -29,6 +29,18 @@ paths:
     
   /proxy:
     x-swagger-router-controller: proxy
+    delete:
+      description: Delete the System Proxy
+      operationId: deleteProxy
+      responses:
+        200:
+          description: OK
+          schema:
+            $ref: "#/definitions/SuccessResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
     post:
       description: Set the HTTP / HTTPS proxy
       operationId: setProxy
@@ -66,6 +78,7 @@ paths:
     x-swagger-router-controller: containers
     get:
       description: Provides a JSON with the details of all the docker containers on the system
+      operationId: containerInfo
       responses:
         200:
           description: OK
